Deduplicate and centralize dependency versions - clean up duplicate dependencies - Removed redundant explicit <version> tags for junit:junit, - Verified full reactor build + tests pass, and confirmed via   dependency:tree that all affected GAs resolve to the intended   versions.